# ComfyUI-Tripo

./: .gitignore  README.md  __init__.py  config.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
api/: system.py  utils.py
web/: tripo_import.js  visualization.js
web/html/: model-viewer.html  threeVisualizer.html
web/js/: threeVisualizer.js
