[project]
name = "comfyui-tripo"
description = "Custom nodes for using [a/Tripo](https://www.tripo3d.ai/) in ComfyUI to create 3D from text and image prompts."
version = "1.1.26"
license = { file = "LICENSE" }
dependencies = ["tripo3d"]

[project.urls]
Repository = "https://github.com/VAST-AI-Research/ComfyUI-Tripo"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "seed93"
DisplayName = "ComfyUI-Tripo"
Icon = "https://www.tripo3d.ai/v1/favicon.png"
